--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,11 @@ project(LearnLLVM17 LANGUAGES CXX C)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-find_package(LLVM 17 REQUIRED CONFIG)
+if(WIN32)
+    # 手动设置路径
+    set(LLVM_DIR "C:/LLVM/clang+llvm-18.1.8-x86_64-pc-windows-msvc/lib/cmake/llvm")
+endif ()
+find_package(LLVM REQUIRED CONFIG)
 
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "LLVM CMake dir: ${LLVM_DIR}")
@@ -16,8 +20,8 @@ add_definitions(${LLVM_DEFINITIONS})
 
 add_subdirectory ("Chapter02/calc")
 #add_subdirectory ("Chapter03/tinylang")
-#add_subdirectory ("Chapter04/tinylang")
-add_subdirectory ("Chapter05/tinylang")
+add_subdirectory ("Chapter04/tinylang")
+#add_subdirectory ("Chapter05/tinylang")
 #add_subdirectory ("Chapter06/calc")
 #add_subdirectory ("Chapter06/tinylang")
 #add_subdirectory ("Chapter07/ppprofiler")
